# bsplyne

./: .gitignore  README.md  make_logo.py  pyproject.toml  setup.py  tmp.py
bsplyne/: MultiPatchBSpline.py  __init__.py  b_spline.py  b_spline_basis.py  geometries_in_3D.py  multi_patch_b_spline.py  my_wide_product.py  parallel_utils.py  save_utils.py
bsplyne.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bsplyne/__pycache__/: b_spline_basis._DN-615.py39.1.nbc  b_spline_basis._DN-615.py39.nbi  b_spline_basis._DN-616.py39.1.nbc  b_spline_basis._DN-616.py39.2.nbc  b_spline_basis._DN-616.py39.nbi  b_spline_basis._findElem-570.py39.1.nbc  b_spline_basis._findElem-570.py39.nbi  b_spline_basis._findElem-571.py39.1.nbc  b_spline_basis._findElem-571.py39.2.nbc  b_spline_basis._findElem-571.py39.nbi  b_spline_basis._funcDNElemOneXi-519.py39.1.nbc  b_spline_basis._funcDNElemOneXi-519.py39.nbi  b_spline_basis._funcDNElemOneXi-520.py39.1.nbc  b_spline_basis._funcDNElemOneXi-520.py39.2.nbc  b_spline_basis._funcDNElemOneXi-520.py39.nbi  b_spline_basis._funcNElemOneXi-481.py39.1.nbc  b_spline_basis._funcNElemOneXi-481.py39.nbi  b_spline_basis._funcNElemOneXi-482.py39.1.nbc  (+2 more)
bsplyne/save_YETI/: Domain.py  (+5 more)
conda/: meta.yaml
doc/: bsplyne.html  search.js
docs/: Makefile  bsplyne.html  index.html  make_txt.py  search.js
examples/: curved_line_exemples.py
exemples/: NURBS_exemple.py  curved_line_exemples.py  surface_exemples.py
tests/: test_MultiPatchBSpline.py  test_b_spline.py  test_b_spline_advanced.py  test_b_spline_basis.py  test_b_spline_basis_advanced.py
(+86 files in other folders)
